Fix wrapping of reg date

--- a/iquhack/static/iquhack/assets/css/custom.css
+++ b/iquhack/static/iquhack/assets/css/custom.css
@@ -30,6 +30,12 @@
 #banner h1 {
     margin-top: 0;
 }
+#banner p {
+    white-space: nowrap;
+}
+#banner p.note{
+    white-space: inherit;
+}
 #banner.open {
     cursor: pointer;
 }
